Goal of Objectives done

--- a/Acronyms.tex
+++ b/Acronyms.tex
@@ -37,3 +37,8 @@
 
 \newacronym{aops}{AOPs}{Apparent Optical Properties}
 
+\newacronym{elm}{ELM}{empirical line method}
+
+\newacronym{cdr}{CDR}{climate data record}
+
+
