--- a/Acronyms.tex
+++ b/Acronyms.tex
@@ -41,4 +41,10 @@
 
 \newacronym{cdr}{CDR}{climate data record}
 
+\newacronym{rmse}{RMSE}{root mean squared error}
+
+\newacronym{gui}{GUI}{graphical user interface}
+
+\newacronym{b_boverb}{$b_b/b$}{backscattering fraction}
+
 
