--- a/Objectives.tex
+++ b/Objectives.tex
@@ -48,13 +48,13 @@ The first objective in this research is to identify the best approach to atmosph
 
 	{\bf \item To design a water constituent concentration retrieval algorithm that can be applied to a specific study area.}
 
-The retrieval algorithm is based on previous work done by \cite{Raqueno:2003}, \cite{GeraceThesis}, and \cite{Pahlevan:2012}. The water-leaving reflectance product obtained after atmospheric correction from the previous stage is used as input to the retrieval algorithm. Each pixel of reflectance product has an unknown concentration. A spectral matching technique is applied to predict this concentration by comparing the spectral shape of each pixel with the elements in a LUT. The spectral matching is made by a least square error minimization along with a trilinear interpolation. This utilizes the non-linear optimization code ``lsqnonlin'' provided in the Optimization Toolbox of the MATLAB software \cite{MatlabHelp}. The output of this process is a concentration mapping for each water constituent.
+The retrieval algorithm is based on previous work done by \cite{Raqueno:2003}, \cite{GeraceThesis}, and \cite{Pahlevan:2012}. The water-leaving reflectance product obtained after atmospheric correction from the previous stage is used as input to the retrieval algorithm. Each pixel of reflectance product has an unknown concentration. A spectral matching technique is applied to predict this concentration by comparing the spectral shape of each pixel with the elements in a LUT. The spectral matching is made by a least square error minimization along with a trilinear interpolation. This utilizes a combination of \acrfull{rmse} and the non-linear optimization code ``lsqnonlin'' provided in the Optimization Toolbox of the MATLAB software \cite{MatlabHelp} to find the best match in a LUT of \gls{rrs} spectra. The output of this process is a concentration mapping for each water constituent.
 
 The LUT is generated using the ``Case 2'' algorithm in HydroLight for different triplets of water constituent concentrations. In order to generate congruent result from HydroLight, the user needs to input IOPs characteristic of the water bodies to be studied. Consequently, IOPs measured spectrophotometrically in the lab from water samples from the field are used as input to HydroLight. These measurements were collected when the Landsat 8 sensor passed over the area of study.
 
 The area of study is the Lake Ontario Rochester Embayment that includes some nearby ponds (Long and Cranberry ponds), the Genesee River plume, the Irondequoit bay and part of Lake Ontario. This area was selected because it exhibits a wide range of variability in concentration of water constituents, so the retrieval algorithm can be tested against a wide range of water conditions.
  
-	{\bf \item To validate results by comparing with {\it in situ} measurements and products from ocean color satellites.}
+	{\bf \item To validate results by comparing with {\it in situ} measurements and standard products from ocean color satellites.}
 
 The results from the retrieval process were validated by comparison with measurements taken from the water bodies being studied. Before this process, the measurements needed to be validated with measurements analyzed by a credible lab (Monroe County Environmental Laboratory). This comparison with this lab shows agreement between the measurements. 
 
@@ -67,17 +67,25 @@ For further validation, the results were compared with products derived from oce
 \subsection{Future Objectives}
 	\begin{enumerate}
 
-		{\bf \item To demo this process to a second study site.}
+			{\bf \item To demo this process to a second study site.}
 
-After validation of the retrieval algorithm over the study area, the next step would be to make it applicable to a second study site. To do so, a more general LUT would be created with elements representative of the different water bodies present in both study sites.
+After validation of the retrieval algorithm over the study area, the next step would be to make it applicable to a second study site. To do so, a more general LUT should be created with elements representative of the different water bodies present in both study sites.
 
-			{\bf \item Integration with hydrodynamics models.} 
+			{\bf \item To include a glint correction.}
 
-The next step would be to use the validated results from the retrieval process for training hydrodynamics models to predicts future behavior of the water bodies. This would be based on previous work made by \cite{Pahlevan:2012} and \cite{GeraceThesis}, who used concentration maps obtained from the retrieval process using satellite imagery to train hydrodynamic models. For example, the hydrodynamic model would allow us to monitor the dynamics of coastal/inland waters near river discharges. The maps of water constituent concentrations on the surface can be used to feed into the hydrodynamic models in order to calibrate them. 
+Some contribution to the sensor-reaching signal could be potentially the reflected sun and sky into the water surface. This signal become more important for the spatial resolution of Landsat 8, where even some waves can be seen in the images. To quantify and correct these effects could improve the retrieval results.
 
-			{\bf \item Make the processes and algorithms more user friendly} 
+			{\bf \item To integrate with Hydrodynamics models.} 
 
-The retrieval process described here requires integration of different modules from different software and use of different programming languages. The next step would be to create a graphical user interface (GUI) in Python to make the process more user friendly, so that anyone with basic remote sensing knowledge could use the methods describe in this thesis. We suggest Python because it is a free platform.
+The next step would be to use the validated results from the retrieval process for training hydrodynamics models to predicts future behavior of the water bodies. This would be based on previous work made by \cite{Pahlevan:2012} and \cite{GeraceThesis}, who used concentration maps obtained from the retrieval process using satellite imagery to train hydrodynamic models. For example, the hydrodynamic model would allow us to monitor the dynamics of coastal and inland waters near river discharges. The maps of water constituent concentrations on the surface can be used to feed into the hydrodynamic models in order to initiate and/or calibrate them. 
+
+			{\bf \item To make the processes and algorithms more user friendly.} 
+
+The retrieval process described here requires integration of different modules from different software and use of different programming languages. The next step would be to create a \gls{gui} in Python to make the process more user friendly and automatized, so that anyone with basic remote sensing knowledge could use the methods describe in this thesis. We suggest Python because it is a free platform.
+
+			{\bf \item To investigate {\it in situ} AOPs and IOPs relationship to calculate backscattering.}
+
+In this study, the \gls{b_boverb} was determined by finding the best match for measured \gls{rrs} in a LUT of \gls{rrs} generated in Hydroligth with IOPs measured in field but varying the \gls{b_boverb}. The bio-optical measurements (i.e. absorption and scattering) combined with {\it in situ} \gls{rrs} could be used to have a better estimation of \gls{b_boverb}, and therefore, more representative LUTs. To accomplish this, an IOP-$R_{rs}$ inversion algorithm can be utilized \cite{Morel:1977rw,Lee2002_invQAA,Werdell2013_inv}.	
 
 	\end{enumerate}	
 
@@ -90,12 +98,12 @@ This research will make several contributions to the field of remote sensing.
 
 First, one important contribution is to demonstrate that Landsat satellites, which have been historically underestimated for the use of water quality measurements, could have a good performance in the estimation of water constituent concentrations.
 
-Second, Landsat 8 was just launched in February 2013 and therefore there are few studies done about its performance so far, specially in its applications related to water assessments. Hence, this is the perfect time to investigate how its new upgrades will improve/impact our capability of retrieving water parameters. Therefore, this research will present one of the first results of Landsat 8 performance over water studies.  
+Second, Landsat 8 was just launched in February 2013 and therefore there are few studies done about its performance so far, specially in its applications related to water assessments. Hence, this is the perfect time to investigate how its new upgrades will improve/impact our capability of retrieving water parameters. Therefore, this research present one of the first results of Landsat 8 performance over water studies.  
 
-Third, while there are other global water constituent concentrations products, Landsat provides a unique combination of temporal (16 days repeat cycle) and spatial resolution (30 m pixel size). Most of the retrieval algorithms available in the literature use ocean color satellites (e.g. SeaWiFS), which have spatial resolution of about $1 km$ to $250 m$, but with products with \todo{check resolution}$4km$ spatial resolution (e.g. MODIS Chlorophyll-{\it a} product). Even though this resolution is suitable for large scale studies, they fail to cover small scale studies (less than 100 m). On the other hand, high spatial resolution sensors carried on aircraft (e.g. AVIRIS) or even satellite (e.g. WorldView-2) although they can be used for small scale studies, their imagery tends to be expensive or not frequently available. Here is where Landsat 8 has the potential of filling that gap because its spatial resolution (30 m) could allow study of medium size targets, a river plume, for instance, and it is free to the international scientific community.
+Third, while there are other global water constituent concentrations products, Landsat provides a unique combination of temporal (16 days repeat cycle) and spatial resolution (30 m pixel size). Most of the retrieval algorithms available in the literature use ocean color satellites (e.g. SeaWiFS), which have spatial resolution of about $250 m$ to $1 km$, but with products with $4km$ spatial resolution (e.g. MODIS Chlorophyll-{\it a} product). Even though this resolution is suitable for large scale studies, they fail to cover small scale studies (less than 100 m). On the other hand, high spatial resolution sensors carried on aircraft (e.g. AVIRIS) or even satellite (e.g. WorldView-2) although they can be used for small scale studies, their imagery tends to be expensive or not frequently available. Here is where Landsat 8 has the potential of filling that gap because its spatial resolution (30 m) could allow study of medium size targets, a river plume, for instance, and it is free to the international scientific community.
 
-This research also contributes to the field of remote sensing by developing a novel approach to correct the atmospheric effect in Landsat 8 images over Case 2 waters via two different approaches. In spite of the fact that the ELM method is widely used to correct satellite image, it needs measurements in the field that are not always available. We developed an algorithm that overcomes this issue by estimating these measurements. Additionally, the {\todo{correct name, is it band ratio?} \color{red} second method} tries to benefit from the concepts behind the methods largely developed and used to atmospherically correct ocean optics sensors.
+This research also contributes to the field of remote sensing by developing a novel approach to correct the atmospheric effect in Landsat 8 images over Case 2 waters via the developed \gls{mobelm}. In spite of the fact that the ELM method is widely used to correct satellite image, it needs measurements in the field that are not always available. We developed the \gls{mobelm} algorithm that overcomes this issue by estimating these measurements. Additionally, the standard atmospheric correction algorithms were tested over Case 2 waters, and they were compared with {\it in situ} data in order to compare with the \gls{mobelm}. This made this study one of the first to compare with {\it in situ} data. The same applies for the retrieval algorithm.
 
-Finally, a large dataset is made available for potential water quality studies through this research. Landsat 8 collects images all around the world where there is land including fresh and coastal waters. Such wide-reaching temporal and spatial coverage is not being broadly exploited for water quality studies.
+Finally, a dataset is made available for potential water quality studies through this research. Landsat 8 collects images all around the world where there is land including fresh and coastal waters. Such wide-reaching temporal and spatial coverage is not being broadly exploited for water quality studies.
 
 The background material necessary to attain these goals is described in the following chapter.
